tests/ui/missing_alias_name.stderr
error: expected alias name (identifier)
 --> tests/ui/missing_alias_name.rs:3:9
  |
3 |         = ::core::cmp::Eq, ::core::cmp::PartialEq
  |         ^
